--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,16 @@
 
     <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
 
+    <string name="format_wind_mph">Wind: <xliff:g id="wind_speed">
+        %1.0f</xliff:g> mph <xliff:g id="wind_dir">%2$s</xliff:g></string>
+
+    <string name="format_wind_kmh">Wind: <xliff:g id="wind_speed">
+        %1.0f</xliff:g> km/h <xliff:g id="wind_dir">%2$s</xliff:g></string>
+
+    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
+
+    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
+
     <string-array name="pref_units_values">
         <item>@string/pref_units_metric</item>
         <item>@string/pref_units_imperial</item>
